--- a/main.ipynb
+++ b/main.ipynb
@@ -60,7 +60,7 @@
     }
    ],
    "source": [
-    "trades = tester.read_trades_from_csv('TradesList-ETH11.csv')\n",
+    "trades = tester.read_trades_from_csv('TradesList-ETH11-min.csv')\n",
     "start_date, end_date = tester.get_date_range(trades)\n",
     "dataset = tester.fetch_market_data(Symbol, TimeFrame(1, 'm'), start_date, end_date)"
    ]
@@ -76,34 +76,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Trades:\n",
-      "  Total Trades: 3333\n",
-      "  Winrate: 55.18%\n",
-      "  Total PnL: -6100.75\n",
-      "  Max Up: 16.18\n",
-      "  Max Drawdown: -23.98\n",
-      "\n",
-      "Long Trades:\n",
-      "  Total Trades: 1642\n",
-      "  Winrate: 56.58%\n",
-      "  Total PnL: -2252.32\n",
-      "  Max Up: 15.98\n",
-      "  Max Drawdown: -23.98\n",
-      "\n",
-      "Short Trades:\n",
-      "  Total Trades: 1691\n",
-      "  Winrate: 53.81%\n",
-      "  Total PnL: -3848.43\n",
-      "  Max Up: 16.18\n",
-      "  Max Drawdown: -23.78\n",
-      "\n"
+      "Total Trades - No trades to calculate statistics.\n",
+      "Long Trades - No trades to calculate statistics.\n",
+      "Short Trades - No trades to calculate statistics.\n"
      ]
     }
    ],
